# synalux-local-relay

./: .env.example  .gitignore  LICENSE  README.md  ecosystem.config.cjs  package-lock.json  package.json  server.mjs
.github/workflows/: build-tray-relay.yml  release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  lib.rs  printer.rs  relay.rs
ui/: index.html
