[package]
name = "synalux-print-relay"
version = "2.0.0"
description = "Synalux Print Relay — bridges cloud POS to local network printers"
authors = ["Synalux LLC"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-autostart = "2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
keyring = "3"
dirs = "6"
base64 = "0.22"
url = "2"
